k9s/app_deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: fastapi
  

spec:
  replicas: 2

  selector:
    matchLabels:
      app: fastapi

  template:
    metadata:
      labels:
        app: fastapi

    spec:
      containers:
      - name: fastapi

        image: fastapi-monitor:v5
        imagePullPolicy: Never

        ports:
        - containerPort: 8000
