k9s/ingress_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-v3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi

  template:
    metadata:
      labels:
        app: fastapi

    spec:
      containers:
        - name: fastapi
          image: fastapi-app:v3
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
